# ngmt-codec

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
branding/: README.md
src/: vmxcodec.h  vmxcodec_arm.cpp  vmxcodec_avx2.cpp  vmxcodec_common.h  vmxcodec_x86.cpp
